Fix call to action section to wrap

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ a {
 button {
     background-color: #3882F6;
     color: #F9FAF8;
-    padding: 5px 20px;
+    padding: 10px 25px;
     border-radius: 8px;
     margin-bottom: 10px;
     font-size: 18px;
@@ -159,6 +159,7 @@ button {
 
 .ctacontainer {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     background-color: #3882F6;
@@ -177,14 +178,9 @@ button {
     line-height: 1.5;
 }
 
-.right-cta {
-    /* flex: 1; */
-    /* display: flex; */
-    /* justify-content: center; */
-}
-
 .right-cta button {
     border-color: #F9FAF8;
+    margin: 0;
 }
 
 footer {
